--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
         Blog
         <br>
-      <a href="http://intense-everglades-24966.herokuapp.com/"target="_blank">
+      <a href="http://stormy-badlands-09552.herokuapp.com/"target="_blank">
         <img src="images/tanks.png" alt="" style="max-width: 300px; margin: 5%;">
       </a>  
       </div>
