--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
                 <img src="images/gun_conf.png" alt="" style="max-width: 300px; margin: 3%;">
               </a>  
               </div>
+              <div class="col-sm" 
+              style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
+                Kawasaki Configurator
+              <a href="https://matthijsvannistelrooij.github.io/Kawasaki/" target="_blank">
+                <img src="images/kawasaki.png" alt="" style="max-width: 300px; margin: 3%;">
+              </a>  
+              </div>
+              <div class="col-sm" 
+              style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
+                iPhone Configurator
+              <a href="https://matthijsvannistelrooij.github.io/iphone/" target="_blank">
+                <img src="images/iphone.png" alt="" style="max-width: 300px; margin: 3%;">
+              </a>  
+              </div>
               </div>
   <br><br>
   
