--- a/index.html
+++ b/index.html
@@ -133,6 +133,32 @@
     </div>
   <br><br>
   
+
+  <p style="text-align: center; font-size: 25px;">Calculators</p>
+    
+  <div class="container">
+    <div class="row">
+
+    <div class="col-sm" 
+    style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
+      Blog
+      <br>
+    <a href="https://matthijsvannistelrooij.github.io/Calculator/"target="_blank">
+      <img src="images/calculator.png" alt="" style="max-width: 300px; margin: 5%;">
+    </a>  
+    </div>
+    <div class="col-sm" 
+    style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
+    E-Commerce
+    <a href="https://matthijsvannistelrooij.github.io/Calculator2/" target="_blank">
+      <img src="images/calculator2.png" alt="" style="max-width: 300px; margin: 5%;">
+    </a>  
+    <br>
+    </div>
+  </div>
+  </div>
+<br><br>
+
   <p style="text-align: center; font-size: 25px;">API's</p>
   
     <div class="container">
