--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
     <div class="col-sm" 
     style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
-    <a href="https://matthijsvannistelrooij.github.io/CalculatorFuji/" target="_blank">
+    <a href="https://matthijsvannistelrooij.github.io/calculatorfuji/" target="_blank">
       <img src="images/calculator2.png" alt="" style="max-width: 300px; margin: 5%;">
     </a>  
     <br>
