--- a/index.html
+++ b/index.html
@@ -139,16 +139,17 @@
   <div class="container">
     <div class="row">
 
-    <div class="col-sm" 
-    style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
-    <a href="https://matthijsvannistelrooij.github.io/Calculator/"target="_blank">
-      <img src="images/calculator.png" alt="" style="max-width: 300px; margin: 5%;">
-    </a>  
-    </div>
+      <div class="col-sm" 
+      style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
+         
+      <a href="https://matthijsvannistelrooij.github.io/calculator/" target="_blank">
+        <img src="images/calculator.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
+      </a>  
+      </div>
     <div class="col-sm" 
     style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
     <a href="https://matthijsvannistelrooij.github.io/calculatorfuji/" target="_blank">
-      <img src="images/calculator2.png" alt="" style="max-width: 300px; margin: 5%;">
+      <img src="images/calculator2.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
     </a>  
     <br>
     </div>
@@ -164,14 +165,14 @@
         style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
         Weather API
       <a href="https://matthijsvannistelrooij.github.io/Openweather/" target="_blank">
-        <img src="images/weatherappi.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/weatherappi.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
       <div class="col-sm" 
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
         Moon API
       <a href="https://matthijsvannistelrooij.github.io/Moon-App/" target="_blank">
-        <img src="images/moonapi.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/moonapi.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
 
@@ -189,21 +190,21 @@
         style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
         Car Logo Memory Game (Luxery Edition)
       <a href="https://matthijsvannistelrooij.github.io/Car-Logo-Game-Luxery-Edition/" target="_blank">
-        <img src="images/cargame1.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/cargame1.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
       <div class="col-sm" 
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
       Car Logo Memory Game
       <a href="https://matthijsvannistelrooij.github.io/Car-Logo-Game/" target="_blank">
-        <img src="images/cargame2.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/cargame2.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
       <div class="col-sm" 
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
       SUV Memory Game
       <a href="https://matthijsvannistelrooij.github.io/Car-Guessing-Game/" target="_blank">
-        <img src="images/cargame3.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/cargame3.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
     </div>
