--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
         Blog
         <br>
       <a href="https://nameless-scrubland-81122.herokuapp.com/"target="_blank">
-        <img src="images/tanks.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/tanks.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
       <div class="col-sm" 
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
       E-Commerce
       <a href="http://fathomless-falls-09757.herokuapp.com/" target="_blank">
-        <img src="images/ecommerce.png" alt="" style="max-width: 300px; margin: 5%;">
+        <img src="images/ecommerce.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       <br>
       </div>
