--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
       </div>
       <div class="col-sm" 
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
-      E-Commerce
-      <a href="http://fathomless-falls-09757.herokuapp.com/" target="_blank">
-        <img src="images/ecommerce.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
+        E-Commerce
+        <br>
+      <a href="http://fathomless-falls-09757.herokuapp.com/"target="_blank">
+        <img src="images/ecommerce.png" alt="" style="max-width: 300px; margin-top: -10px; padding: 2%">
       </a>  
-      <br>
       </div>
     </div>
     </div>
