--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
          
       <a href="https://matthijsvannistelrooij.github.io/calculator/" target="_blank">
-        <img src="images/calculator.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
+        <img src="images/Calculator.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
       </a>  
       </div>
     <div class="col-sm" 
