--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
         <img src="images/ecommerce.png" alt="" style="max-width: 300px; margin-top: -10px; padding: 2%">
       </a>  
       </div>
+      <div class="col-sm" 
+      style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
+        Laravel Blog
+        <br>
+      <a href="http://intense-everglades-24966.herokuapp.com/"target="_blank">
+        <img src="images/notebook.png" alt="" style="max-width: 300px; margin-top: -10px; padding: 2%">
+      </a>  
+      </div>
     </div>
     </div>
   <br><br>
