--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
   </div>
 
   <hr>
+  <div class="main" id="section2">
+    <h2>Projecten</h2>
+  </div>
   <div class="container" style="margin-top: 5%; margin-bottom: 10%;">
     <p style="text-align: center; font-size: 25px;">PHP Applicaties</p>
 
