--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <a href="#section2">
 
-    <img src="images/frontpage.jpg" class="image">
+    <img src="images/frontpage.jpeg" class="image">
     <div class="col-sm">
       <!-- <a href="#section2">
                             <div class="overlay">
