--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <hr style="margin-top: 5% ">
   <div class="container mb-5 mt-5">
     <div class="row">
-      <div class="col">
+      <!-- <div class="col">
         <img class="code-logo" src="images/logos/0_XK4Q_OOsF4lObTgL.png" alt="">
       </div>
       <div class="col">
@@ -73,7 +73,7 @@
       </div>
       <div class="col">
         <img class="code-logo" src="images/logos/laravel.png" alt="">
-      </div>
+      </div> -->
     </div>
   </div>
 
