--- a/index.html
+++ b/index.html
@@ -50,40 +50,28 @@ this.load('https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+enc
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#section2">Projecten</a>
-          </li>
-        </ul>
-        <span class="navbar-text">
-          Login
-        </span>
       </div>
     </div>
   </nav>
 
-  <a href="#section2">
 
+<div>
+    <a href="#section2">
+      <div class="image-arrow">  
+        <img src="images/arrow.png" class="image">
+      </div>
+
+    <div class="top-left">ROBERT</div>
     <img src="images/portfolio_rick_robert.jpg" class="image">
-    <div class="col-sm">
-      <!-- <a href="#section2">
-                            <div class="overlay">
-                                <img src="images/chevron_down.png" alt="">
-                                <br><br>
-                            </a> -->
-    </div>
-
+ 
   </a>
-  </div>
+</div> 
+</div>
 
 <hr style="margin-top: 5% ">
   <div class="container mb-5 mt-5">
     <div class="row">
-      <!-- <div class="col">
+      <div class="col">
         <img class="code-logo" src="images/logos/0_XK4Q_OOsF4lObTgL.png" alt="">
       </div>
       <div class="col">
@@ -100,7 +88,7 @@ this.load('https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+enc
       </div>
       <div class="col">
         <img class="code-logo" src="images/logos/laravel.png" alt="">
-      </div> -->
+      </div>
     </div>
   </div>
 
