--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ this.load('https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+enc
 
 <div>
     <a href="#section2">
-    <img src="images/portfolio_rick_robert.jpg" class="image">
+    <img src="images/frontpage.jpeg" class="image">
  
   </a>
 </div> 
@@ -187,14 +187,6 @@ this.load('https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+enc
           SUV Memory Game
           <a href="https://matthijsvannistelrooij.github.io/Car-Guessing-Game/" target="_blank">
             <img src="images/cargame3.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
-          </a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm" style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
-          Robert Doet de Bekers in de Vaat
-          <a href="https://matthijsvannistelrooij.github.io/Robert/" target="_blank">
-            <img src="images/robertgame.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
           </a>
         </div>
       </div>
