--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm" style="border: 1px solid rgb(186, 186, 186); text-align: center; margin: 2px;">
-          Car Logo Memory Game (Luxery Edition)
+          Car Logo Memory Game (Luxury Edition)
           <a href="https://matthijsvannistelrooij.github.io/Car-Logo-Game-Luxery-Edition/" target="_blank">
             <img src="images/cargame1.png" alt="" style="max-width: 300px; margin: 2%; padding: 2%">
           </a>
